--- a/GlosSIIntegration.csproj
+++ b/GlosSIIntegration.csproj
@@ -48,12 +48,14 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Crc.cs" />
     <Compile Include="GlosSIIntegration.cs" />
     <Compile Include="GlosSIIntegrationSettings.cs" />
     <Compile Include="GlosSIIntegrationSettingsView.xaml.cs">
       <DependentUpon>GlosSIIntegrationSettingsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SteamGameID.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="extension.yaml">
