Add GlosSITarget class. Add Newtonsoft.Json and update PlayniteSDK.

--- a/GlosSIIntegration.csproj
+++ b/GlosSIIntegration.csproj
@@ -31,8 +31,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Playnite.SDK, Version=6.2.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\PlayniteSDK.6.2.0\lib\net462\Playnite.SDK.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Playnite.SDK, Version=6.2.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\PlayniteSDK.6.2.2\lib\net462\Playnite.SDK.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -54,6 +57,7 @@
     <Compile Include="GlosSIIntegrationSettingsView.xaml.cs">
       <DependentUpon>GlosSIIntegrationSettingsView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="GlosSITarget.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SteamGameID.cs" />
   </ItemGroup>
