--- a/GlosSIIntegration.csproj
+++ b/GlosSIIntegration.csproj
@@ -62,9 +62,9 @@
     <Compile Include="SteamGameID.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="DefaultTarget.json">
+    <Content Include="DefaultTarget.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    </Content>
     <None Include="extension.yaml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
