--- a/Source/GlosSIIntegration.csproj
+++ b/Source/GlosSIIntegration.csproj
@@ -52,23 +52,23 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ShortcutCreationView.xaml.cs">
+    <Compile Include="Views\ShortcutCreationView.xaml.cs">
       <DependentUpon>ShortcutCreationView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Crc.cs" />
+    <Compile Include="Models\Crc.cs" />
     <Compile Include="GlosSIIntegration.cs" />
     <Compile Include="GlosSIIntegrationSettings.cs" />
-    <Compile Include="GlosSIIntegrationSettingsView.xaml.cs">
+    <Compile Include="Views\GlosSIIntegrationSettingsView.xaml.cs">
       <DependentUpon>GlosSIIntegrationSettingsView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="GlosSITarget.cs" />
+    <Compile Include="Models\GlosSITarget.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="SteamGameID.cs" />
+    <Compile Include="Models\SteamGameID.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\DefaultTarget.txt" />
@@ -78,11 +78,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="ShortcutCreationView.xaml">
+    <Page Include="Views\ShortcutCreationView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="GlosSIIntegrationSettingsView.xaml">
+    <Page Include="Views\GlosSIIntegrationSettingsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
