--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: /source/Localization/loc_source.xaml
-    translation: /source/Localization/%locale_with_underscore%.xaml
+  - source: /Source/Localization/loc_source.xaml
+    translation: /Source/Localization/%locale_with_underscore%.xaml
