--- a/InstallerManifest.yaml
+++ b/InstallerManifest.yaml
@@ -2,7 +2,7 @@
 Packages:
   - Version: 1.0.0
     RequiredApiVersion: 6.2.2
-    ReleaseDate: 2022-08-TODO
-    PackageUrl: TODO
+    ReleaseDate: 2022-08-10
+    PackageUrl: https://github.com/LemmusLemmus/GlosSI-Integration-Playnite/releases/download/v1.0.0/GlosSIIntegration_6b0297da-75e5-4330-bb2d-b64bff22c315_1_0_0.pext
     Changelog:
       - Initial release
