Add forum link to extension.yaml.

--- a/Source/extension.yaml
+++ b/Source/extension.yaml
@@ -12,3 +12,5 @@ Links:
       Url: https://github.com/LemmusLemmus/GlosSI-Integration-Playnite/wiki
     - Name: Translate
       Url: https://crowdin.com/project/glossi-integration-playnite
+    - Name: Playnite Forum
+      Url: https://playnite.link/forum/thread-1307.html
