--- a/InstallerManifest.yaml
+++ b/InstallerManifest.yaml
@@ -1,5 +1,11 @@
 ﻿AddonId: GlosSIIntegration_6b0297da-75e5-4330-bb2d-b64bff22c315
 Packages:
+  - Version: 1.0.2
+    RequiredApiVersion: 6.2.2
+    ReleaseDate: 2022-08-16
+    PackageUrl: https://github.com/LemmusLemmus/GlosSI-Integration-Playnite/releases/download/v1.0.2/GlosSIIntegration_6b0297da-75e5-4330-bb2d-b64bff22c315_1_0_2.pext
+    Changelog:
+      - Fixed a bug where games with no icon could not be added or removed.
   - Version: 1.0.1
     RequiredApiVersion: 6.2.2
     ReleaseDate: 2022-08-11
