--- a/InstallerManifest.yaml
+++ b/InstallerManifest.yaml
@@ -1,5 +1,12 @@
 ﻿AddonId: GlosSIIntegration_6b0297da-75e5-4330-bb2d-b64bff22c315
 Packages:
+  - Version: 1.0.3
+    RequiredApiVersion: 6.2.2
+    ReleaseDate: 2022-09-23
+    PackageUrl: https://github.com/LemmusLemmus/GlosSI-Integration-Playnite/releases/download/v1.0.3/GlosSIIntegration_6b0297da-75e5-4330-bb2d-b64bff22c315_1_0_3.pext
+    Changelog:
+      - Added Italian translations. Thanks StarFang208!
+      - Fixed the appearance of a hyperlink.
   - Version: 1.0.2
     RequiredApiVersion: 6.2.2
     ReleaseDate: 2022-08-16
