--- a/InstallerManifest.yaml
+++ b/InstallerManifest.yaml
@@ -1,5 +1,13 @@
 ﻿AddonId: GlosSIIntegration_6b0297da-75e5-4330-bb2d-b64bff22c315
 Packages:
+  - Version: 1.0.5
+    RequiredApiVersion: 6.2.2
+    ReleaseDate: 2022-10-07
+    PackageUrl: https://github.com/LemmusLemmus/GlosSI-Integration-Playnite/releases/download/v1.0.5/GlosSIIntegration_6b0297da-75e5-4330-bb2d-b64bff22c315_1_0_5.pext
+    Changelog:
+      - Fixed Playnite losing focus in fullscreen mode when using the Playnite overlay.
+      - Fixed the extension being unable to close GlosSITargets with a disabled Steam/GlosSI overlay.
+      - Demoted the "failed to close the Steam overlay" error pop-up to a notification.
   - Version: 1.0.4
     RequiredApiVersion: 6.2.2
     ReleaseDate: 2022-09-28
