--- a/Source/GlosSIIntegration.csproj
+++ b/Source/GlosSIIntegration.csproj
@@ -62,7 +62,7 @@
     <Compile Include="Views\GlosSIIntegrationSettingsView.xaml.cs">
       <DependentUpon>GlosSIIntegrationSettingsView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Models\GlosSITarget.cs" />
+    <Compile Include="Models\GlosSITargetFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
