--- a/InstallerManifest.yaml
+++ b/InstallerManifest.yaml
@@ -1,5 +1,21 @@
 ﻿AddonId: GlosSIIntegration_6b0297da-75e5-4330-bb2d-b64bff22c315
 Packages:
+  - Version: 1.1.0
+    RequiredApiVersion: 6.5.0
+    ReleaseDate: 2022-11-04
+    PackageUrl: https://github.com/LemmusLemmus/GlosSI-Integration-Playnite/releases/download/v1.1.0/GlosSIIntegration_6b0297da-75e5-4330-bb2d-b64bff22c315_1_1_0.pext
+    Changelog:
+      - Added option to close the game when the overlay is closed.
+      - Added more Spanish translations. Thanks, Madcore!
+      - Added some semblance of support for running multiple games simultaneously.
+      - Added a link to tips and tricks in the settings menu.
+      - Improved game startup times slightly.
+      - The Playnite overlay now starts slightly earlier when launching Playnite Fullscreen mode.
+      - Updated the extension icon.
+      - Fixed overlays with non-ASCII characters not launching.
+      - Fixed overlay closing and opening unnecessarily when the same Steam shortcut is used for two overlays (i.e. the Playnite overlay and the default overlay).
+      - Various minor changes.
+      - Added bugs (probably). If you find any, please report them on GitHub or Discord!
   - Version: 1.0.5
     RequiredApiVersion: 6.2.2
     ReleaseDate: 2022-10-07
