--- a/InstallerManifest.yaml
+++ b/InstallerManifest.yaml
@@ -1,5 +1,13 @@
 ﻿AddonId: GlosSIIntegration_6b0297da-75e5-4330-bb2d-b64bff22c315
 Packages:
+  - Version: 1.1.1
+    RequiredApiVersion: 6.5.0
+    ReleaseDate: 2022-11-09
+    PackageUrl: https://github.com/LemmusLemmus/GlosSI-Integration-Playnite/releases/download/v1.1.1/GlosSIIntegration_6b0297da-75e5-4330-bb2d-b64bff22c315_1_1_1.pext
+    Changelog:
+      - Fixed extension crashing when closing certain games.
+      - Fixed starting of game overlays if they are started before the Playnite overlay finishes starting.
+      - Minor timeout and logging changes.
   - Version: 1.1.0
     RequiredApiVersion: 6.5.0
     ReleaseDate: 2022-11-04
