--- a/InstallerManifest.yaml
+++ b/InstallerManifest.yaml
@@ -1,5 +1,14 @@
 ﻿AddonId: GlosSIIntegration_6b0297da-75e5-4330-bb2d-b64bff22c315
 Packages:
+  - Version: 1.1.2
+    RequiredApiVersion: 6.5.0
+    ReleaseDate: 2022-11-16
+    PackageUrl: https://github.com/LemmusLemmus/GlosSI-Integration-Playnite/releases/download/v1.1.2/GlosSIIntegration_6b0297da-75e5-4330-bb2d-b64bff22c315_1_1_2.pext
+    Changelog:
+      - Added more Spanish translations. Thanks, darklinkpower!
+      - Changed the default settings to enable the integration by default.
+      - Fixed a rare crash when the path to GlosSI has not been set and a game is launched.
+      - Fixed the GlosSI path text box not updating visually.
   - Version: 1.1.1
     RequiredApiVersion: 6.5.0
     ReleaseDate: 2022-11-09
