--- a/Source/GlosSIIntegration.csproj
+++ b/Source/GlosSIIntegration.csproj
@@ -52,6 +52,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\GlosSISteamShortcut.cs" />
     <Compile Include="Models\OverlayState.cs" />
     <Compile Include="ViewModels\GlosSIIntegrationSettingsViewModel.cs" />
     <Compile Include="Views\ShortcutCreationView.xaml.cs">
