Rework overlay switching.

--- a/Source/GlosSIIntegration.csproj
+++ b/Source/GlosSIIntegration.csproj
@@ -34,8 +34,8 @@
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="Playnite.SDK, Version=6.5.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\PlayniteSDK.6.5.0\lib\net462\Playnite.SDK.dll</HintPath>
+    <Reference Include="Playnite.SDK, Version=6.9.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\PlayniteSDK.6.9.0\lib\net462\Playnite.SDK.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -52,8 +52,16 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\FocusRestorer.cs" />
+    <Compile Include="Models\GameOverlay.cs" />
     <Compile Include="Models\GlosSISteamShortcut.cs" />
-    <Compile Include="Models\OverlayState.cs" />
+    <Compile Include="Models\GlosSITargetProcess.cs" />
+    <Compile Include="Models\OverlaySwitchingCoordinator.cs" />
+    <Compile Include="Models\Overlay.cs" />
+    <Compile Include="Models\OverlaySwitchingDecisionMaker.cs" />
+    <Compile Include="Models\OverwritingTaskStandbyer.cs" />
+    <Compile Include="Models\PlayniteOverlay.cs" />
+    <Compile Include="Models\ProcessExtensions.cs" />
     <Compile Include="ViewModels\GlosSIIntegrationSettingsViewModel.cs" />
     <Compile Include="Views\ShortcutCreationView.xaml.cs">
       <DependentUpon>ShortcutCreationView.xaml</DependentUpon>
