--- a/Source/GlosSIIntegration.csproj
+++ b/Source/GlosSIIntegration.csproj
@@ -64,6 +64,11 @@
     <Compile Include="Models\OverwritingTaskStandbyer.cs" />
     <Compile Include="Models\PlayniteOverlay.cs" />
     <Compile Include="Models\ProcessExtensions.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="ViewModels\GlosSIIntegrationSettingsViewModel.cs" />
     <Compile Include="Views\ShortcutCreationView.xaml.cs">
       <DependentUpon>ShortcutCreationView.xaml</DependentUpon>
@@ -76,16 +81,11 @@
     </Compile>
     <Compile Include="Models\GlosSITargetFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <Compile Include="Models\SteamShortcut.cs" />
     <Compile Include="ViewModels\ShortcutCreationViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\DefaultTarget.txt" />
+    <None Include="Resources\DefaultTarget.json" />
     <None Include="extension.yaml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -182,8 +182,8 @@
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
