--- a/Source/GlosSIIntegration.csproj
+++ b/Source/GlosSIIntegration.csproj
@@ -52,18 +52,32 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\FocusRestorer.cs" />
-    <Compile Include="Models\GameOverlay.cs" />
-    <Compile Include="Models\GlosSISteamShortcut.cs" />
-    <Compile Include="Models\GlosSITargetProcess.cs" />
-    <Compile Include="Models\GlosSITargetSettings.cs" />
-    <Compile Include="Models\JsonExtensions.cs" />
-    <Compile Include="Models\OverlaySwitchingCoordinator.cs" />
-    <Compile Include="Models\Overlay.cs" />
-    <Compile Include="Models\OverlaySwitchingDecisionMaker.cs" />
-    <Compile Include="Models\OverwritingTaskStandbyer.cs" />
-    <Compile Include="Models\PlayniteOverlay.cs" />
+    <Compile Include="Models\GlosSITargets\Files\StartFromSteamLaunchOptions.cs" />
+    <Compile Include="Models\GlosSITargets\Types\GlosSITarget.cs" />
+    <Compile Include="Models\GlosSITargets\Types\DefaultGlosSITarget.cs" />
+    <Compile Include="Models\GlosSITargets\Files\GlosSITargetFileInfo.cs" />
+    <Compile Include="Models\GlosSITargets\Types\UnidentifiedGlosSITarget.cs" />
+    <Compile Include="Models\SteamLauncher\ISteamMode.cs" />
+    <Compile Include="Models\Overlays\Types\DefaultGameOverlay.cs" />
+    <Compile Include="Models\GlosSITargets\Types\GameGlosSITarget.cs" />
+    <Compile Include="Models\GlosSITargets\Files\GameGlosSITargetFile.cs" />
+    <Compile Include="Models\Overlays\Types\GameOverlay.cs" />
+    <Compile Include="Models\GlosSITargets\Shortcuts\GlosSISteamShortcut.cs" />
+    <Compile Include="Models\Overlays\GlosSITargetProcess.cs" />
+    <Compile Include="Models\GlosSITargets\Files\GlosSITargetSettings.cs" />
+    <Compile Include="Models\GlosSITargets\Files\JsonExtensions.cs" />
+    <Compile Include="Models\Overlays\OverlaySwitchingCoordinator.cs" />
+    <Compile Include="Models\Overlays\Types\Overlay.cs" />
+    <Compile Include="Models\Overlays\OverlaySwitchingDecisionMaker.cs" />
+    <Compile Include="Models\GlosSITargets\Types\PlayniteGlosSITarget.cs" />
+    <Compile Include="Models\Overlays\Types\PlayniteOverlay.cs" />
+    <Compile Include="Models\Overlays\Types\SteamStartableOverlay.cs" />
     <Compile Include="Models\ProcessExtensions.cs" />
+    <Compile Include="Models\Overlays\Types\ExternallyStartedOverlay.cs" />
+    <Compile Include="Models\SteamLauncher\Steam.cs" />
+    <Compile Include="Models\SteamLauncher\SteamBigPictureMode.cs" />
+    <Compile Include="Models\SteamLauncher\SteamDesktopMode.cs" />
+    <Compile Include="Models\WinWindow.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -73,15 +87,15 @@
     <Compile Include="Views\ShortcutCreationView.xaml.cs">
       <DependentUpon>ShortcutCreationView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Models\Crc.cs" />
+    <Compile Include="Models\GlosSITargets\Shortcuts\Crc.cs" />
     <Compile Include="GlosSIIntegration.cs" />
     <Compile Include="GlosSIIntegrationSettings.cs" />
     <Compile Include="Views\GlosSIIntegrationSettingsView.xaml.cs">
       <DependentUpon>GlosSIIntegrationSettingsView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Models\GlosSITargetFile.cs" />
+    <Compile Include="Models\GlosSITargets\Files\GlosSITargetFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Models\SteamShortcut.cs" />
+    <Compile Include="Models\GlosSITargets\Shortcuts\SteamShortcut.cs" />
     <Compile Include="ViewModels\ShortcutCreationViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -194,5 +208,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
